# rperf

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  flake.nix  rdmarc  run  shell.nix
example/: README.md  agent_conf.toml  probe_conf.toml
include/: clock.h  log.h  parameters.h  rdma.h  rperf.h  tcpsocket.h
src/: adaptor.rs  agent.rs  args.rs  client.rs  clock.c  collector.rs  config.rs  helpers.c  main.c  main.rs  message.rs  probe.rs  progressbar.c  rdma.c  rdma.rs  rperf.c  server.rs  tcpsocket.c  tests.c
